# OPCAS

./: LICENSE  README.md  csv_unify.py  csv_unify_one.py  csv_unify_overtaking.py  csv_unify_two.py  deploycode.py  salientfeatures.py
3D_CNN_Model/: data_processing_v2.py  deploycode.py  deploydat.py  deploymodel.py  model.py  result_3dcnn_10stacked_5jumps_3depth.csv  result_val_3dcnn_10stacked_5jumps_3depth.csv  result_val_3dcnn_25stacked_5jumps_3depth.csv  run_2d_cnn.py  run_3d_cnn.py
Arduino Code/: Servo_ESC_Control.ino
CNN_Model/: 2D_deploycode.py  2D_salient_features.py  3D_deploycode.py  3D_salient_features.py  model.hdf5  (+21 more)
Catkin_PKG_Car/src/drive_ros_msgs/: CMakeLists.txt  README.md
Catkin_PKG_Car/src/drive_ros_msgs/msg/: EncoderLinear.msg  Obstacle.msg  ObstacleArray.msg  RoadLane.msg  RoadLine.msg  TimeCompare.msg  VehicleEncoder.msg  mav_cc16_COMMAND.msg  mav_cc16_CONFIG.msg  mav_cc16_CONFIG_COUNT.msg  mav_cc16_CONFIG_PARAM_BOOL.msg  mav_cc16_CONFIG_PARAM_FLOAT.msg  mav_cc16_CONFIG_PARAM_INT.msg  mav_cc16_CONFIG_PARAM_SET_BOOL.msg  mav_cc16_CONFIG_PARAM_SET_FLOAT.msg  mav_cc16_CONFIG_PARAM_SET_INT.msg  mav_cc16_CONFIG_REQUEST.msg  mav_cc16_CONFIG_REQUEST_COUNT.msg  mav_cc16_CONFIG_REQUEST_PARAMS.msg  mav_cc16_CONTROL_COMMAND.msg  mav_cc16_CONTROL_LIGHTS.msg  mav_cc16_DEBUG.msg  mav_cc16_HEARTBEAT.msg  mav_cc16_IMU.msg  mav_cc16_NOTIFICATION.msg  mav_cc16_ODOMETER.msg  mav_cc16_ODOMETER_ABS.msg  mav_cc16_ODOMETER_DELTA.msg  mav_cc16_ODOMETER_DELTA_RAW.msg  mav_cc16_ODOMETER_RAW.msg  mav_cc16_PARKING_LOT.msg  mav_cc16_PROXIMITY.msg  mav_cc16_TELEMETRY.msg
(+306 files in other folders)
